@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.1433
+//      
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -77,7 +77,6 @@ namespace MonoDevelop.XmlEditor.Gui {
             this.registeredSchemasView = new Gtk.TreeView();
             this.registeredSchemasView.CanFocus = true;
             this.registeredSchemasView.Name = "registeredSchemasView";
-            this.registeredSchemasView.HeadersClickable = true;
             this.GtkScrolledWindow.Add(this.registeredSchemasView);
             this.hbox1.Add(this.GtkScrolledWindow);
             Gtk.Box.BoxChild w3 = ((Gtk.Box.BoxChild)(this.hbox1[this.GtkScrolledWindow]));
@@ -121,7 +120,6 @@ namespace MonoDevelop.XmlEditor.Gui {
             // Container child vbox1.Gtk.Box+BoxChild
             this.label3 = new Gtk.Label();
             this.label3.Name = "label3";
-            this.label3.LabelProp = "";
             this.vbox1.Add(this.label3);
             Gtk.Box.BoxChild w8 = ((Gtk.Box.BoxChild)(this.vbox1[this.label3]));
             w8.Position = 2;
@@ -150,7 +148,6 @@ namespace MonoDevelop.XmlEditor.Gui {
             this.defaultAssociationsView = new Gtk.TreeView();
             this.defaultAssociationsView.CanFocus = true;
             this.defaultAssociationsView.Name = "defaultAssociationsView";
-            this.defaultAssociationsView.HeadersClickable = true;
             this.GtkScrolledWindow1.Add(this.defaultAssociationsView);
             this.hbox2.Add(this.GtkScrolledWindow1);
             Gtk.Box.BoxChild w11 = ((Gtk.Box.BoxChild)(this.hbox2[this.GtkScrolledWindow1]));
